--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ arrow==1.2.3
 asttokens==2.2.1
 attrs==22.1.0
 backcall==0.2.0
+barbar==0.2.1
 binaryornot==0.4.4
 black==22.10.0
 certifi==2022.9.24
@@ -16,7 +17,7 @@ entrypoints==0.4
 executing==1.2.0
 fastjsonschema==2.16.2
 flake8==6.0.0
--e git+ssh://git@github.com/smb-h/gscmr4cqbir.git@d9e62711dcf996cd565af9c87c7c61099a887262#egg=gscmr4cqbir
+-e git+ssh://git@github.com/smb-h/gscmr4cqbir.git@f0e24b4d37640e54cf1b9106c77bd8ade6ec274b#egg=gscmr4cqbir
 idna==3.4
 ipykernel==6.17.1
 ipython==8.7.0
@@ -24,6 +25,7 @@ isort==5.10.1
 jedi==0.18.2
 Jinja2==3.1.2
 jinja2-time==0.2.0
+joblib==1.2.0
 jsonschema==4.17.3
 jupyter_client==7.4.8
 jupyter_core==5.1.0
@@ -34,12 +36,18 @@ mypy-extensions==0.4.3
 nbformat==5.7.0
 nest-asyncio==1.5.6
 numpy==1.23.5
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+opencv-python==4.6.0.66
 packaging==21.3
 pandas==1.5.2
 parso==0.8.3
 pathspec==0.10.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.3.0
 platformdirs==2.5.4
 plotly==5.11.0
 prompt-toolkit==3.0.33
@@ -58,13 +66,22 @@ pytz==2022.6
 PyYAML==6.0
 pyzmq==24.0.1
 requests==2.28.1
+scikit-learn==1.1.3
+scipy==1.9.3
 six==1.16.0
 stack-data==0.6.2
 tenacity==8.1.0
 text-unidecode==1.3
+threadpoolctl==3.1.0
 tokenize-rt==5.0.0
 tomli==2.0.1
+torch==1.13.0
+torchaudio==0.13.0
+torchsummary==1.5.1
+torchvision==0.14.0
 tornado==6.2
+tqdm==4.64.1
 traitlets==5.6.0
+typing_extensions==4.4.0
 urllib3==1.26.13
 wcwidth==0.2.5
