--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,22 @@ backcall==0.2.0
 barbar==0.2.1
 binaryornot==0.4.4
 black==22.10.0
-certifi==2022.12.7
+certifi==2022.9.24
 chardet==5.0.0
 charset-normalizer==2.1.1
 click==8.1.3
+contourpy==1.0.6
 cookiecutter==2.1.1
 cookiecutter-data-science @ git+https://github.com/drivendata/cookiecutter-data-science@b4c0c12243653c493c188239af14c835b9768fbc
+cycler==0.11.0
 debugpy==1.6.4
 decorator==5.1.1
 entrypoints==0.4
 executing==1.2.0
 fastjsonschema==2.16.2
 flake8==6.0.0
--e git+ssh://git@github.com/smb-h/gscmr4cqbir.git@f0e24b4d37640e54cf1b9106c77bd8ade6ec274b#egg=gscmr4cqbir
+fonttools==4.38.0
+-e git+ssh://git@github.com/smb-h/gscmr4cqbir.git@8a2ebbad196e051e1266f55ea127bdbe57699dda#egg=gscmr4cqbir
 idna==3.4
 ipykernel==6.17.1
 ipython==8.7.0
@@ -29,7 +32,9 @@ joblib==1.2.0
 jsonschema==4.17.3
 jupyter_client==7.4.8
 jupyter_core==5.1.0
+kiwisolver==1.4.4
 MarkupSafe==2.1.1
+matplotlib==3.6.2
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mypy-extensions==0.4.3
