--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 contourpy==1.0.6
 cookiecutter==2.1.1
-cookiecutter-data-science @ git+https://github.com/drivendata/cookiecutter-data-science@b4c0c12243653c493c188239af14c835b9768fbc
+# cookiecutter-data-science @ git+https://github.com/drivendata/cookiecutter-data-science@b4c0c12243653c493c188239af14c835b9768fbc
 cycler==0.11.0
 debugpy==1.6.4
 decorator==5.1.1
@@ -20,7 +20,7 @@ executing==1.2.0
 fastjsonschema==2.16.2
 flake8==6.0.0
 fonttools==4.38.0
--e git+ssh://git@github.com/smb-h/gscmr4cqbir.git@8a2ebbad196e051e1266f55ea127bdbe57699dda#egg=gscmr4cqbir
+# -e git+ssh://git@github.com/smb-h/gscmr4cqbir.git@8a2ebbad196e051e1266f55ea127bdbe57699dda#egg=gscmr4cqbir
 idna==3.4
 ipykernel==6.17.1
 ipython==8.7.0
