--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,13 @@ attrs==22.1.0
 backcall==0.2.0
 barbar==0.2.1
 binaryornot==0.4.4
-black==22.10.0
+black==23.1.0
 certifi==2022.12.7
 chardet==5.0.0
 charset-normalizer==2.1.1
 click==8.1.3
 contourpy==1.0.6
 cookiecutter==2.1.1
-# cookiecutter-data-science @ git+https://github.com/drivendata/cookiecutter-data-science@b4c0c12243653c493c188239af14c835b9768fbc
 cycler==0.11.0
 debugpy==1.6.4
 decorator==5.1.1
@@ -20,18 +19,20 @@ executing==1.2.0
 fastjsonschema==2.16.2
 flake8==6.0.0
 fonttools==4.38.0
-# -e git+ssh://git@github.com/smb-h/gscmr4cqbir.git@8a2ebbad196e051e1266f55ea127bdbe57699dda#egg=gscmr4cqbir
 idna==3.4
+importlib-resources==5.10.2
 ipykernel==6.17.1
 ipython==8.7.0
-isort==5.10.1
+ipywidgets==8.0.4
+isort==5.12.0
 jedi==0.18.2
 Jinja2==3.1.2
 jinja2-time==0.2.0
 joblib==1.2.0
 jsonschema==4.17.3
-jupyter_client==7.4.8
-jupyter_core==5.1.0
+jupyter-client==7.4.8
+jupyter-core==5.1.0
+jupyterlab-widgets==3.0.5
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib==3.6.2
@@ -46,14 +47,15 @@ nvidia-cuda-nvrtc-cu11==11.7.99
 nvidia-cuda-runtime-cu11==11.7.99
 nvidia-cudnn-cu11==8.5.0.96
 opencv-python==4.6.0.66
-packaging==21.3
+packaging==23.0
 pandas==1.5.2
 parso==0.8.3
-pathspec==0.10.2
+pathspec==0.11.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.3.0
-platformdirs==2.5.4
+pkgutil-resolve-name==1.3.10
+platformdirs==2.6.2
 plotly==5.11.0
 prompt-toolkit==3.0.33
 psutil==5.9.4
@@ -87,6 +89,8 @@ torchvision==0.14.0
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.6.0
-typing_extensions==4.4.0
+typing-extensions==4.4.0
 urllib3==1.26.13
 wcwidth==0.2.5
+widgetsnbextension==4.0.5
+zipp==3.12.0
