--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ certifi==2022.12.7
 chardet==5.0.0
 charset-normalizer==2.1.1
 click==8.1.3
+cloudpickle==2.2.1
 contourpy==1.0.6
 cookiecutter==2.1.1
 cycler==0.11.0
