--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asttokens==2.2.1
 attrs==22.1.0
 backcall==0.2.0
 barbar==0.2.1
+beautifulsoup4==4.11.2
 binaryornot==0.4.4
 black==23.1.0
+bleach==6.0.0
 certifi==2022.12.7
+cffi==1.15.1
 chardet==5.0.0
 charset-normalizer==2.1.1
 click==8.1.3
@@ -15,15 +21,18 @@ cookiecutter==2.1.1
 cycler==0.11.0
 debugpy==1.6.4
 decorator==5.1.1
+defusedxml==0.7.1
 entrypoints==0.4
 executing==1.2.0
 fastjsonschema==2.16.2
 flake8==6.0.0
 fonttools==4.38.0
 idna==3.4
+importlib-metadata==6.0.0
 importlib-resources==5.10.2
 ipykernel==6.17.1
 ipython==8.7.0
+ipython-genutils==0.2.0
 ipywidgets==8.0.4
 isort==5.12.0
 jedi==0.18.2
@@ -33,15 +42,25 @@ joblib==1.2.0
 jsonschema==4.17.3
 jupyter-client==7.4.8
 jupyter-core==5.1.0
+jupyter-events==0.6.3
+jupyter-server==2.2.1
+jupyter-server-terminals==0.4.4
+jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.5
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
 mccabe==0.7.0
+mistune==2.0.4
 mypy-extensions==0.4.3
+nbclassic==0.5.1
+nbclient==0.7.2
+nbconvert==7.2.9
 nbformat==5.7.0
 nest-asyncio==1.5.6
+notebook==6.5.2
+notebook-shim==0.2.2
 numpy==1.23.5
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-nvrtc-cu11==11.7.99
@@ -50,6 +69,7 @@ nvidia-cudnn-cu11==8.5.0.96
 opencv-python==4.6.0.66
 packaging==23.0
 pandas==1.5.2
+pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.11.0
 pexpect==4.8.0
@@ -58,29 +78,39 @@ Pillow==9.3.0
 pkgutil-resolve-name==1.3.10
 platformdirs==2.6.2
 plotly==5.11.0
+prometheus-client==0.16.0
 prompt-toolkit==3.0.33
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.10.0
+pycparser==2.21
 pyflakes==3.0.1
 Pygments==2.13.0
 pyparsing==3.0.9
 pyrsistent==0.19.2
 python-dateutil==2.8.2
 python-dotenv==0.21.0
+python-json-logger==2.0.4
 python-slugify==7.0.0
 pytz==2022.6
 PyYAML==6.0
 pyzmq==24.0.1
 requests==2.28.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 scikit-learn==1.1.3
 scipy==1.9.3
+Send2Trash==1.8.0
 six==1.16.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
 stack-data==0.6.2
 tenacity==8.1.0
+terminado==0.17.1
 text-unidecode==1.3
 threadpoolctl==3.1.0
+tinycss2==1.2.1
 tokenize-rt==5.0.0
 tomli==2.0.1
 torch==1.13.1
@@ -93,5 +123,7 @@ traitlets==5.6.0
 typing-extensions==4.4.0
 urllib3==1.26.13
 wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.5.1
 widgetsnbextension==4.0.5
 zipp==3.12.0
