--- a/requirements.txt
+++ b/requirements.txt
@@ -116,6 +116,7 @@ tomli==2.0.1
 torch==1.13.1
 torchaudio==0.13.0
 torchsummary==1.5.1
+torchtext==0.14.1
 torchvision==0.14.0
 tornado==6.2
 tqdm==4.64.1
