--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+albumentations==1.3.0
 anyio==3.6.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
@@ -28,6 +29,7 @@ fastjsonschema==2.16.2
 flake8==6.0.0
 fonttools==4.38.0
 idna==3.4
+imageio==2.26.0
 importlib-metadata==6.0.0
 importlib-resources==5.10.2
 ipykernel==6.17.1
@@ -48,6 +50,7 @@ jupyter-server-terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.5
 kiwisolver==1.4.4
+lazy-loader==0.1
 MarkupSafe==2.1.1
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
@@ -59,6 +62,7 @@ nbclient==0.7.2
 nbconvert==7.2.9
 nbformat==5.7.0
 nest-asyncio==1.5.6
+networkx==3.0
 notebook==6.5.2
 notebook-shim==0.2.2
 numpy==1.23.5
@@ -67,6 +71,7 @@ nvidia-cuda-nvrtc-cu11==11.7.99
 nvidia-cuda-runtime-cu11==11.7.99
 nvidia-cudnn-cu11==8.5.0.96
 opencv-python==4.6.0.66
+opencv-python-headless==4.7.0.72
 packaging==23.0
 pandas==1.5.2
 pandocfilters==1.5.0
@@ -83,6 +88,7 @@ prompt-toolkit==3.0.33
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycocotools==2.0.6
 pycodestyle==2.10.0
 pycparser==2.21
 pyflakes==3.0.1
@@ -94,13 +100,16 @@ python-dotenv==0.21.0
 python-json-logger==2.0.4
 python-slugify==7.0.0
 pytz==2022.6
+PyWavelets==1.4.1
 PyYAML==6.0
 pyzmq==24.0.1
+qudida==0.0.4
 requests==2.28.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+scikit-image==0.20.0
 scikit-learn==1.1.3
-scipy==1.9.3
+scipy==1.9.0
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.3.0
@@ -110,10 +119,11 @@ tenacity==8.1.0
 terminado==0.17.1
 text-unidecode==1.3
 threadpoolctl==3.1.0
+tifffile==2023.2.28
 tinycss2==1.2.1
 tokenize-rt==5.0.0
 tomli==2.0.1
-torch==1.13.1
+torch==1.13.0
 torchaudio==0.13.0
 torchsummary==1.5.1
 torchtext==0.14.1
