--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ chardet==5.0.0
 charset-normalizer==2.1.1
 click==8.1.3
 cloudpickle==2.2.1
+cmake==3.26.0
 contourpy==1.0.6
 cookiecutter==2.1.1
 cycler==0.11.0
@@ -26,8 +27,10 @@ defusedxml==0.7.1
 entrypoints==0.4
 executing==1.2.0
 fastjsonschema==2.16.2
+filelock==3.10.0
 flake8==6.0.0
 fonttools==4.38.0
+fqdn==1.5.1
 idna==3.4
 imageio==2.26.0
 importlib-metadata==6.0.0
@@ -36,26 +39,30 @@ ipykernel==6.17.1
 ipython==8.10.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.4
+isoduration==20.11.0
 isort==5.12.0
 jedi==0.18.2
 Jinja2==3.1.2
 jinja2-time==0.2.0
 joblib==1.2.0
+jsonpointer==2.3
 jsonschema==4.17.3
-jupyter-client==7.4.8
-jupyter-core==5.1.0
 jupyter-events==0.6.3
-jupyter-server==2.2.1
-jupyter-server-terminals==0.4.4
+jupyter_client==7.4.8
+jupyter_core==5.1.0
+jupyter_server==2.2.1
+jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.5
 kiwisolver==1.4.4
-lazy-loader==0.1
+lazy_loader==0.1
+lit==16.0.0
 MarkupSafe==2.1.1
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mistune==2.0.4
+mpmath==1.3.0
 mypy-extensions==0.4.3
 nbclassic==0.5.1
 nbclient==0.7.2
@@ -64,12 +71,19 @@ nbformat==5.7.0
 nest-asyncio==1.5.6
 networkx==3.0
 notebook==6.5.2
-notebook-shim==0.2.2
+notebook_shim==0.2.2
 numpy==1.23.5
 nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
 nvidia-cuda-nvrtc-cu11==11.7.99
 nvidia-cuda-runtime-cu11==11.7.99
 nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
 opencv-python==4.6.0.66
 opencv-python-headless==4.7.0.72
 packaging==23.0
@@ -80,7 +94,7 @@ pathspec==0.11.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.3.0
-pkgutil-resolve-name==1.3.10
+pkgutil_resolve_name==1.3.10
 platformdirs==2.6.2
 plotly==5.11.0
 prometheus-client==0.16.0
@@ -115,6 +129,7 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.6.2
+sympy==1.11.1
 tenacity==8.1.0
 terminado==0.17.1
 text-unidecode==1.3
@@ -123,17 +138,21 @@ tifffile==2023.2.28
 tinycss2==1.2.1
 tokenize-rt==5.0.0
 tomli==2.0.1
-torch==1.13.0
-torchaudio==0.13.0
+torch==2.0.0
+torchaudio==2.0.1
+torchdata==0.6.0
 torchsummary==1.5.1
-torchtext==0.14.1
-torchvision==0.14.0
+torchtext==0.15.1
+torchvision==0.15.1
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.6.0
-typing-extensions==4.4.0
+triton==2.0.0
+typing_extensions==4.4.0
+uri-template==1.2.0
 urllib3==1.26.13
 wcwidth==0.2.5
+webcolors==1.12
 webencodings==0.5.1
 websocket-client==1.5.1
 widgetsnbextension==4.0.5
