--- a/requirements.txt
+++ b/requirements.txt
@@ -4,41 +4,43 @@ argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asttokens==2.2.1
-attrs==22.1.0
+attrs==22.2.0
 backcall==0.2.0
 barbar==0.2.1
-beautifulsoup4==4.11.2
+beautifulsoup4==4.12.2
 binaryornot==0.4.4
-black==23.1.0
+black==23.3.0
 bleach==6.0.0
 certifi==2022.12.7
 cffi==1.15.1
-chardet==5.0.0
-charset-normalizer==2.1.1
+chardet==5.1.0
+charset-normalizer==3.1.0
 click==8.1.3
 cloudpickle==2.2.1
-cmake==3.26.0
-contourpy==1.0.6
+cmake==3.26.3
+comm==0.1.3
+contourpy==1.0.7
 cookiecutter==2.1.1
 cycler==0.11.0
-debugpy==1.6.4
+debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
+distlib==0.3.6
 entrypoints==0.4
 executing==1.2.0
-fastjsonschema==2.16.2
-filelock==3.10.0
+fastjsonschema==2.16.3
+filelock==3.11.0
 flake8==6.0.0
-fonttools==4.38.0
+fonttools==4.39.3
 fqdn==1.5.1
 idna==3.4
-imageio==2.26.0
-importlib-metadata==6.0.0
-importlib-resources==5.10.2
-ipykernel==6.17.1
-ipython==8.10.0
+imageio==2.27.0
+importlib-metadata==6.3.0
+importlib-resources==5.12.0
+ipykernel==6.22.0
+ipython==8.12.0
 ipython-genutils==0.2.0
-ipywidgets==8.0.4
+ipywidgets==8.0.6
 isoduration==20.11.0
 isort==5.12.0
 jedi==0.18.2
@@ -48,31 +50,31 @@ joblib==1.2.0
 jsonpointer==2.3
 jsonschema==4.17.3
 jupyter-events==0.6.3
-jupyter_client==7.4.8
-jupyter_core==5.1.0
-jupyter_server==2.2.1
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
+jupyterlab-widgets==3.0.7
 kiwisolver==1.4.4
-lazy_loader==0.1
-lit==16.0.0
-MarkupSafe==2.1.1
-matplotlib==3.6.2
+lazy_loader==0.2
+lit==16.0.1
+MarkupSafe==2.1.2
+matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
-mistune==2.0.4
+mistune==2.0.5
 mpmath==1.3.0
-mypy-extensions==0.4.3
-nbclassic==0.5.1
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.0
+mypy-extensions==1.0.0
+nbclassic==0.5.5
+nbclient==0.7.3
+nbconvert==7.3.1
+nbformat==5.8.0
 nest-asyncio==1.5.6
-networkx==3.0
-notebook==6.5.2
+networkx==3.1
+notebook==6.5.4
 notebook_shim==0.2.2
-numpy==1.23.5
+numpy==1.24.2
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-cupti-cu11==11.7.101
 nvidia-cuda-nvrtc-cu11==11.7.99
@@ -84,21 +86,22 @@ nvidia-cusolver-cu11==11.4.0.1
 nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
-opencv-python==4.6.0.66
+opencv-python==4.7.0.72
 opencv-python-headless==4.7.0.72
-packaging==23.0
-pandas==1.5.2
+packaging==23.1
+pandas==2.0.0
 pandocfilters==1.5.0
 parso==0.8.3
-pathspec==0.11.0
+pathspec==0.11.1
+pbr==5.11.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.3.0
+Pillow==9.5.0
 pkgutil_resolve_name==1.3.10
-platformdirs==2.6.2
-plotly==5.11.0
+platformdirs==3.2.0
+plotly==5.14.1
 prometheus-client==0.16.0
-prompt-toolkit==3.0.33
+prompt-toolkit==3.0.38
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -106,35 +109,36 @@ pycocotools==2.0.6
 pycodestyle==2.10.0
 pycparser==2.21
 pyflakes==3.0.1
-Pygments==2.13.0
+Pygments==2.15.0
 pyparsing==3.0.9
-pyrsistent==0.19.2
+pyrsistent==0.19.3
 python-dateutil==2.8.2
-python-dotenv==0.21.0
-python-json-logger==2.0.4
-python-slugify==7.0.0
-pytz==2022.6
+python-dotenv==1.0.0
+python-json-logger==2.0.7
+python-slugify==8.0.1
+pytz==2023.3
 PyWavelets==1.4.1
 PyYAML==6.0
-pyzmq==24.0.1
+pyzmq==25.0.2
 qudida==0.0.4
-requests==2.28.1
+requests==2.28.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 scikit-image==0.20.0
-scikit-learn==1.1.3
-scipy==1.9.0
+scikit-learn==1.2.2
+scipy==1.9.1
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.3.0
-soupsieve==2.3.2.post1
+soupsieve==2.4
 stack-data==0.6.2
+stevedore==5.0.0
 sympy==1.11.1
-tenacity==8.1.0
+tenacity==8.2.2
 terminado==0.17.1
 text-unidecode==1.3
 threadpoolctl==3.1.0
-tifffile==2023.2.28
+tifffile==2023.4.12
 tinycss2==1.2.1
 tokenize-rt==5.0.0
 tomli==2.0.1
@@ -145,15 +149,19 @@ torchsummary==1.5.1
 torchtext==0.15.1
 torchvision==0.15.1
 tornado==6.2
-tqdm==4.64.1
-traitlets==5.6.0
+tqdm==4.65.0
+traitlets==5.9.0
 triton==2.0.0
-typing_extensions==4.4.0
+typing_extensions==4.5.0
+tzdata==2023.3
 uri-template==1.2.0
-urllib3==1.26.13
-wcwidth==0.2.5
-webcolors==1.12
+urllib3==1.26.15
+virtualenv==20.21.0
+virtualenv-clone==0.5.7
+virtualenvwrapper==4.8.4
+wcwidth==0.2.6
+webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.1
-widgetsnbextension==4.0.5
-zipp==3.12.0
+widgetsnbextension==4.0.7
+zipp==3.15.0
