--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+absl-py==1.4.0
 albumentations==1.3.0
 anyio==3.6.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asttokens==2.2.1
+astunparse==1.6.3
 attrs==22.2.0
 backcall==0.2.0
 barbar==0.2.1
@@ -11,6 +13,7 @@ beautifulsoup4==4.12.2
 binaryornot==0.4.4
 black==23.3.0
 bleach==6.0.0
+cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
 chardet==5.1.0
@@ -31,18 +34,27 @@ executing==1.2.0
 fastjsonschema==2.16.3
 filelock==3.11.0
 flake8==6.0.0
+flatbuffers==23.3.3
 fonttools==4.39.3
 fqdn==1.5.1
+gast==0.4.0
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.53.0
+h5py==3.8.0
 idna==3.4
 imageio==2.27.0
 importlib-metadata==6.3.0
 importlib-resources==5.12.0
+install==1.3.5
 ipykernel==6.22.0
 ipython==8.12.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.6
 isoduration==20.11.0
 isort==5.12.0
+jax==0.4.8
 jedi==0.18.2
 Jinja2==3.1.2
 jinja2-time==0.2.0
@@ -56,14 +68,18 @@ jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
+keras==2.12.0
 kiwisolver==1.4.4
 lazy_loader==0.2
+libclang==16.0.0
 lit==16.0.1
+Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mistune==2.0.5
+ml-dtypes==0.1.0
 mpmath==1.3.0
 mypy-extensions==1.0.0
 nbclassic==0.5.5
@@ -74,7 +90,7 @@ nest-asyncio==1.5.6
 networkx==3.1
 notebook==6.5.4
 notebook_shim==0.2.2
-numpy==1.24.2
+numpy==1.23.5
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-cupti-cu11==11.7.101
 nvidia-cuda-nvrtc-cu11==11.7.99
@@ -86,8 +102,10 @@ nvidia-cusolver-cu11==11.4.0.1
 nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
 opencv-python==4.7.0.72
 opencv-python-headless==4.7.0.72
+opt-einsum==3.3.0
 packaging==23.1
 pandas==2.0.0
 pandocfilters==1.5.0
@@ -102,9 +120,12 @@ platformdirs==3.2.0
 plotly==5.14.1
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
+protobuf==4.22.3
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycocotools==2.0.6
 pycodestyle==2.10.0
 pycparser==2.21
@@ -122,8 +143,10 @@ PyYAML==6.0
 pyzmq==25.0.2
 qudida==0.0.4
 requests==2.28.2
+requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rsa==4.9
 scikit-image==0.20.0
 scikit-learn==1.2.2
 scipy==1.9.1
@@ -135,6 +158,13 @@ stack-data==0.6.2
 stevedore==5.0.0
 sympy==1.11.1
 tenacity==8.2.2
+tensorboard==2.12.2
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.32.0
+termcolor==2.2.0
 terminado==0.17.1
 text-unidecode==1.3
 threadpoolctl==3.1.0
@@ -163,5 +193,7 @@ wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.1
+Werkzeug==2.2.3
 widgetsnbextension==4.0.7
+wrapt==1.14.1
 zipp==3.15.0
