--- a/requirements.txt
+++ b/requirements.txt
@@ -163,6 +163,7 @@ tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.12.0
 tensorflow-estimator==2.12.0
+tensorflow-hub==0.13.0
 tensorflow-io-gcs-filesystem==0.32.0
 termcolor==2.2.0
 terminado==0.17.1
