--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ beautifulsoup4==4.12.2
 binaryornot==0.4.4
 black==23.3.0
 bleach==6.0.0
+blis==0.7.10
 cachetools==5.3.0
+catalogue==2.0.8
 certifi==2022.12.7
 cffi==1.15.1
 chardet==5.1.0
@@ -22,9 +24,11 @@ click==8.1.3
 cloudpickle==2.2.1
 cmake==3.26.3
 comm==0.1.3
+confection==0.1.0
 contourpy==1.0.7
 cookiecutter==2.1.1
 cycler==0.11.0
+cymem==2.0.7
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
@@ -70,6 +74,7 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
 keras==2.12.0
 kiwisolver==1.4.4
+langcodes==3.3.0
 lazy_loader==0.2
 libclang==16.0.0
 lit==16.0.1
@@ -81,6 +86,7 @@ mccabe==0.7.0
 mistune==2.0.5
 ml-dtypes==0.1.0
 mpmath==1.3.0
+murmurhash==1.0.9
 mypy-extensions==1.0.0
 nbclassic==0.5.5
 nbclient==0.7.3
@@ -111,6 +117,7 @@ pandas==2.0.0
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.11.1
+pathy==0.10.2
 pbr==5.11.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -118,6 +125,7 @@ Pillow==9.5.0
 pkgutil_resolve_name==1.3.10
 platformdirs==3.2.0
 plotly==5.14.1
+preshed==3.0.8
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
 protobuf==4.22.3
@@ -129,6 +137,7 @@ pyasn1-modules==0.2.8
 pycocotools==2.0.6
 pycodestyle==2.10.0
 pycparser==2.21
+pydantic==1.10.11
 pyflakes==3.0.1
 Pygments==2.15.0
 pyparsing==3.0.9
@@ -152,8 +161,13 @@ scikit-learn==1.2.2
 scipy==1.9.1
 Send2Trash==1.8.0
 six==1.16.0
+smart-open==6.3.0
 sniffio==1.3.0
 soupsieve==2.4
+spacy==3.6.0
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+srsly==2.4.7
 stack-data==0.6.2
 stevedore==5.0.0
 sympy==1.11.1
@@ -168,6 +182,7 @@ tensorflow-io-gcs-filesystem==0.32.0
 termcolor==2.2.0
 terminado==0.17.1
 text-unidecode==1.3
+thinc==8.1.10
 threadpoolctl==3.1.0
 tifffile==2023.4.12
 tinycss2==1.2.1
@@ -183,6 +198,7 @@ tornado==6.2
 tqdm==4.65.0
 traitlets==5.9.0
 triton==2.0.0
+typer==0.9.0
 typing_extensions==4.5.0
 tzdata==2023.3
 uri-template==1.2.0
@@ -190,6 +206,7 @@ urllib3==1.26.15
 virtualenv==20.21.0
 virtualenv-clone==0.5.7
 virtualenvwrapper==4.8.4
+wasabi==1.1.2
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
