--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,24 @@
+[build-system]
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+
+[project]
+name = "iirbctf"
+version = "0.0.1"
+description = "Interactive Image Retrieval Based On Content And Textual Feedback"
+authors = [
+  { name = "SMB H" },
+]
+license = { file = "LICENSE" }
+readme = "README.md"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License"
+]
+requires-python = "~=3.10"
+
 [tool.black]
 line-length = 99
-target-version = ['py36', 'py37', 'py38']
 include = '\.pyi?$'
 exclude = '''
 /(
