--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ bleach==6.0.0
 cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.15.1
+cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.7
 clip-client==0.8.2
@@ -26,6 +27,7 @@ cycler==0.11.0
 debugpy==1.6.7.post1
 decorator==5.1.1
 Deprecated==1.2.14
+distlib==0.3.7
 docarray==0.21.1
 docker==6.1.3
 ecdsa==0.18.0
@@ -41,12 +43,13 @@ google-auth==2.22.0
 google-auth-oauthlib==0.4.6
 googleapis-common-protos==1.60.0
 graphviz==0.20.1
-grpcio==1.53.0
+grpcio==1.47.5
 grpcio-health-checking==1.47.5
 grpcio-reflection==1.47.5
 h11==0.14.0
 httptools==0.6.0
 huggingface-hub==0.16.4
+identify==2.5.30
 idna==3.4
 imageio==2.31.2
 importlib-metadata==6.8.0
@@ -77,6 +80,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 nest-asyncio==1.5.7
 networkx==3.1
+nodeenv==1.8.0
 numpy==1.25.2
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-cupti-cu11==11.7.101
@@ -97,7 +101,7 @@ opentelemetry-exporter-otlp-proto-common==1.19.0
 opentelemetry-exporter-otlp-proto-grpc==1.19.0
 opentelemetry-exporter-otlp-proto-http==1.19.0
 opentelemetry-exporter-prometheus==1.12.0rc1
-opentelemetry-instrumentation==0.41b0
+opentelemetry-instrumentation==0.40b0
 opentelemetry-instrumentation-aiohttp-client==0.40b0
 opentelemetry-instrumentation-asgi==0.40b0
 opentelemetry-instrumentation-fastapi==0.40b0
@@ -113,6 +117,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==10.0.0
 platformdirs==3.10.0
+pre-commit==3.4.0
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
 protobuf==3.20.3
@@ -169,9 +174,10 @@ traitlets==5.9.0
 transformers==4.33.2
 triton==2.0.0
 typing_extensions==4.7.1
-urllib3==1.26.17
+urllib3==1.26.16
 uvicorn==0.23.1
 uvloop==0.17.0
+virtualenv==20.24.5
 watchfiles==0.20.0
 wcwidth==0.2.6
 webencodings==0.5.1
