--- a/requirements.txt
+++ b/requirements.txt
@@ -1,190 +1,190 @@
-absl-py==1.4.0
-aiofiles==23.2.1
-aiohttp==3.8.5
-aiosignal==1.3.1
-anyio==4.0.0
-asgiref==3.7.2
-asttokens==2.2.1
-async-timeout==4.0.3
-attrs==23.1.0
-backcall==0.2.0
-backoff==2.2.1
-black==23.9.1
-bleach==6.0.0
-cachetools==5.3.1
-certifi==2023.7.22
-cffi==1.15.1
-cfgv==3.4.0
-charset-normalizer==3.2.0
-click==8.1.7
-clip-client==0.8.2
-clip-server==0.8.2
-cmake==3.27.2
-comm==0.1.4
-contourpy==1.1.0
-crc32c==2.3.post0
-cycler==0.11.0
-debugpy==1.6.7.post1
-decorator==5.1.1
-Deprecated==1.2.14
-distlib==0.3.7
-docarray==0.21.1
-docker==6.1.3
-ecdsa==0.18.0
-exceptiongroup==1.1.3
-executing==1.2.0
-fastapi==0.103.0
-filelock==3.12.3
-fonttools==4.42.1
-frozenlist==1.4.0
-fsspec==2023.6.0
-ftfy==6.1.1
-google-auth==2.22.0
-google-auth-oauthlib==0.4.6
-googleapis-common-protos==1.60.0
-graphviz==0.20.1
-grpcio==1.53.0
-grpcio-health-checking==1.47.5
-grpcio-reflection==1.47.5
-h11==0.14.0
-httptools==0.6.0
-huggingface-hub==0.16.4
-identify==2.5.30
-idna==3.4
-imageio==2.31.2
-importlib-metadata==6.8.0
-importlib-resources==6.0.1
-ipykernel==6.25.1
-ipython==8.15.0
-isort==5.12.0
-jcloud==0.2.16
-jedi==0.19.0
-jina==3.20.1
-jina-hubble-sdk==0.39.0
-Jinja2==3.1.2
-jupyter_client==8.3.1
-jupyter_core==5.3.1
-kaggle==1.5.16
-kiwisolver==1.4.5
-lazy_loader==0.3
-lit==16.0.6
-lz4==4.3.2
-Markdown==3.4.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mpmath==1.3.0
-multidict==6.0.4
-mypy-extensions==1.0.0
-nest-asyncio==1.5.7
-networkx==3.1
-nodeenv==1.8.0
-numpy==1.25.2
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-oauthlib==3.2.2
-open-clip-torch==2.20.0
-opentelemetry-api==1.19.0
-opentelemetry-exporter-otlp==1.19.0
-opentelemetry-exporter-otlp-proto-common==1.19.0
-opentelemetry-exporter-otlp-proto-grpc==1.19.0
-opentelemetry-exporter-otlp-proto-http==1.19.0
-opentelemetry-exporter-prometheus==1.12.0rc1
-opentelemetry-instrumentation==0.41b0
-opentelemetry-instrumentation-aiohttp-client==0.40b0
-opentelemetry-instrumentation-asgi==0.40b0
-opentelemetry-instrumentation-fastapi==0.40b0
-opentelemetry-instrumentation-grpc==0.40b0
-opentelemetry-proto==1.19.0
-opentelemetry-sdk==1.19.0
-opentelemetry-semantic-conventions==0.40b0
-opentelemetry-util-http==0.40b0
-packaging==23.1
-parso==0.8.3
-pathspec==0.11.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==10.0.1
-platformdirs==3.10.0
-pre-commit==3.4.0
-prometheus-client==0.17.1
-prompt-toolkit==3.0.39
-protobuf==3.20.3
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==1.10.12
-Pygments==2.16.1
-pyparsing==3.0.9
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-jose==3.3.0
-python-multipart==0.0.6
-python-slugify==8.0.1
-PyWavelets==1.4.1
-PyYAML==6.0.1
-pyzmq==25.1.1
-regex==2023.8.8
-requests==2.31.0
-requests-oauthlib==1.3.1
-rich==13.5.2
-rsa==4.9
-safetensors==0.3.3
-scikit-image==0.21.0
-scipy==1.11.2
-sentencepiece==0.1.99
-six==1.16.0
-sniffio==1.3.0
-soundfile==0.12.1
-stack-data==0.6.2
-starlette==0.27.0
-sympy==1.12
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-logger==0.1.0
-tensorboard-plugin-wit==1.8.1
-tensorboardX @ git+https://github.com/lanpa/tensorboardX@b81f4c6ee218ca732dcb81893d18181ca9b8590e
-text-unidecode==1.3
-tifffile==2023.8.30
-timm==0.9.6
-tokenize-rt==5.2.0
-tokenizers==0.13.3
-tomli==2.0.1
-torch==2.0.1
-torchsummary==1.5.1
-torchvision==0.15.2
-torchviz==0.0.2
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.9.0
-transformers==4.33.2
-triton==2.0.0
-typing_extensions==4.7.1
-urllib3==1.26.18
-uvicorn==0.23.1
-uvloop==0.17.0
-virtualenv==20.24.5
-watchfiles==0.20.0
-wcwidth==0.2.6
-webencodings==0.5.1
-websocket-client==1.6.2
-websockets==11.0.3
-Werkzeug==2.3.7
-wget==3.2
-wrapt==1.15.0
-yarl==1.9.2
-zipp==3.16.2
+absl-py
+aiofiles
+aiohttp
+aiosignal
+anyio
+asgiref
+asttokens
+async-timeout
+attrs
+backcall
+backoff
+black
+bleach
+cachetools
+certifi
+cffi
+cfgv
+charset-normalizer
+click
+clip-client
+clip-server
+cmake
+comm
+contourpy
+crc32c
+cycler
+debugpy
+decorator
+Deprecated
+distlib
+docarray
+docker
+ecdsa
+exceptiongroup
+executing
+fastapi
+filelock
+fonttools
+frozenlist
+fsspec
+ftfy
+google-auth
+google-auth-oauthlib
+googleapis-common-protos
+graphviz
+grpcio
+grpcio-health-checking
+grpcio-reflection
+h11
+httptools
+huggingface-hub
+identify
+idna
+imageio
+importlib-metadata
+importlib-resources
+ipykernel
+ipython
+isort
+jcloud
+jedi
+jina
+jina-hubble-sdk
+Jinja2
+jupyter_client
+jupyter_core
+kaggle
+kiwisolver
+lazy_loader
+lit
+lz4
+Markdown
+markdown-it-py
+MarkupSafe
+matplotlib
+matplotlib-inline
+mdurl
+mpmath
+multidict
+mypy-extensions
+nest-asyncio
+networkx
+nodeenv
+numpy
+nvidia-cublas-cu11
+nvidia-cuda-cupti-cu11
+nvidia-cuda-nvrtc-cu11
+nvidia-cuda-runtime-cu11
+nvidia-cudnn-cu11
+nvidia-cufft-cu11
+nvidia-curand-cu11
+nvidia-cusolver-cu11
+nvidia-cusparse-cu11
+nvidia-nccl-cu11
+nvidia-nvtx-cu11
+oauthlib
+open-clip-torch
+opentelemetry-api
+opentelemetry-exporter-otlp
+opentelemetry-exporter-otlp-proto-common
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-exporter-otlp-proto-http
+opentelemetry-exporter-prometheus
+opentelemetry-instrumentation
+opentelemetry-instrumentation-aiohttp-client
+opentelemetry-instrumentation-asgi
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-grpc
+opentelemetry-proto
+opentelemetry-sdk
+opentelemetry-semantic-conventions
+opentelemetry-util-http
+packaging
+parso
+pathspec
+pexpect
+pickleshare
+Pillow
+platformdirs
+pre-commit
+prometheus-client
+prompt-toolkit
+protobuf
+psutil
+ptyprocess
+pure-eval
+pyasn1
+pyasn1-modules
+pycparser
+pydantic
+Pygments
+pyparsing
+python-dateutil
+python-dotenv
+python-jose
+python-multipart
+python-slugify
+PyWavelets
+PyYAML
+pyzmq
+regex
+requests
+requests-oauthlib
+rich
+rsa
+safetensors
+scikit-image
+scipy
+sentencepiece
+six
+sniffio
+soundfile
+stack-data
+starlette
+sympy
+tensorboard
+tensorboard-data-server
+tensorboard-logger
+tensorboard-plugin-wit
+tensorboardX @ git+https://github.com/lanpa/tensorboardX
+text-unidecode
+tifffile
+timm
+tokenize-rt
+tokenizers
+tomli
+torch
+torchsummary
+torchvision
+torchviz
+tornado
+tqdm
+traitlets
+transformers
+triton
+typing_extensions
+urllib3
+uvicorn
+uvloop
+virtualenv
+watchfiles
+wcwidth
+webencodings
+websocket-client
+websockets
+Werkzeug
+wget
+wrapt
+yarl
+zipp
