:zap: Update(src): Updating our model for fashioniq dataset

--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ googleapis-common-protos
 graphviz
 grpcio
 grpcio-health-checking
-grpcio-reflection
+# grpcio-reflection
 h11
 httptools
 huggingface-hub
