--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "iirbctf"
+name = "mqirtn"
 version = "0.0.1"
 description = "Interactive Image Retrieval Based On Content And Textual Feedback"
 authors = [
